# pdfpc-ts

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  wrangler.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  main.yml  oxlint.yml
compute-js/: fastly.toml  package.json  pnpm-lock.yaml
compute-js/src/: index.js
src/: App.tsx  DropZone.tsx  catppuccin.css  iconify-compat.mjs  index.tsx  lib.rs  main.css  pdfium-worker.ts
