[package]
name = "bitmap-to-png"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25.9", default-features = false, features = [
  "bmp",
  "png"
], optional = true }
oxipng = { version = "10.0.0", default-features = false, features = [
  "freestanding",
], optional = true }
png = { version = "0.18.0", default-features = false, features = [
  "unstable",
], optional = true }
wasm-bindgen = "0.2.108"
zune-png = { version = "0.5.0-rc1", default-features = false, features = [
  # "portable-simd",
  "std"
], optional = true }

[features]
default = ["png"]

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1
